# cotacao_media_cafe

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/processed/: processed.parquet
data/raw/: dolar.json  dolar.parquet  quantidade.json  quantidade.parquet  real.json  real.parquet
notebooks/: Cotação Preço Cafe.ipynb  metadado.json  teste.parquet
src/: colata_dados.py  constante.py  metadata_structure.py  parse_html.py  processa_dado.py
