[metadata]
name = cotacao_media_cafe
version = 0.0.1
author = Ramon Ferreira Cruz
author_email = ramonfer.cruz@gmail.com
description = Analise cotação média de café
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ramonfercruz/cotacao_media_cafe
project_urls =
    Bug Tracker = https://github.com/ramonfercruz/cotacao_media_cafe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src